--- a/Resume.html
+++ b/Resume.html
@@ -49,103 +49,85 @@
             <div class="col-md-4 bg-color-personal-info section-column">
                 <div class="row">
                     <div class="col-12">
-                    <h3 class="section-heading uppercase">
-                        Personal Info
-                    </h3>
+                        <h3 class="section-heading uppercase">
+                            Work History
+                        </h3>
+                    </div>
                 </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">
+                            Name:
+                        </p>
+                    </div>
+                    <div class="value">
+                        <p class="uppercase">
+                            Felipe dos Santos Ferreira
+                        </p>
+                    </div>
+                </div>
+
             </div>
-            <div class="personal-info-item">
-                <div class="key">
-                    <p class="uppercase">
-                        Name:
-                    </p>
+            <div class="col-md-8 bg-color-three-reasons section-column">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="section-heading uppercase">my skills</h3>
+                    </div>
                 </div>
-                <div class="value">
-                    <p class="uppercase">
-                        Felipe dos Santos Ferreira
-                    </p>
-                </div>
-            </div>
-                        <div class="personal-info-item">
-                <div class="key">
-                    <p class="uppercase">
-                        adres:
-                    </p>
-                </div>
-                <div class="value">
-                    <p class="uppercase">
-                        The Hague, The Netherlands
-                    </p>
-                </div>
-            </div>
-                        <div class="personal-info-item">
-                <div class="key">
-                    <p class="uppercase">
-                        phone:
-                    </p>
-                </div>
-                <div class="value">
-                    <p class="uppercase">
-                        +31 6 4001 89 63 
-                    </p>
-                </div>
-            </div>
-                        <div class="personal-info-item">
-                <div class="key">
-                    <p class="uppercase">
-                        email:
-                    </p>
-                </div>
-                <div class="value">
-                    <p class="uppercase">
-                        santos_br@hotmail.nl
-                    </p>
-                </div>
-            </div>
-            
-        </div>
-        <div class="col-md-8 bg-color-three-reasons section-column">
-            <div class="row">
-                <div class="col">
-                    <h3 class="section-heading uppercase">About me</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-10 off-1 offset-sm-0 col-sm-4 col-md-6">
-                    <div class="row">
-                        <div class="col-2">
-                            <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                <div class="row">
+                    <div class="col-10 off-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Front end</h4>
+                                <p>some text to fill this out so check if it works :3</p>
+                            </div>
                         </div>
-                        <div class="col-10">
-                            <h4 class="three-reasons-heading uppercase">What do i do?</h4>
-                            <p>some text to fill this out so check if it works :3</p>
+                    </div>
+                    <div class="col-10 off-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-gear" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10 off-1 offset-sm-0 col-sm-4 col-md-6">
+                                <h4 class="three-reasons-heading uppercase">Back end?</h4>
+                                <p>some text to fill this out so check if it works :3</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-10 off-1 offset-sm-0 col-sm-4 col-md-6">
-                    <div class="row">
-                        <div class="col-2">
-                            <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
+                <div class="row">
+                    <div class="col">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                            </div>
+                            <span class="progress-type">HTML / HTML5</span>
                         </div>
-                        <div class="col-10 off-1 offset-sm-0 col-sm-4 col-md-6">
-                            <h4 class="three-reasons-heading uppercase">how do i do?</h4>
-                            <p>some text to fill this out so check if it works :3</p>
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style=width:80%>
+                            </div>
+                            <span class="progress-type">CSS / CSS3</span>
                         </div>
-                    </div>
-                </div>
-                <div class="col-10 off-1 offset-sm-0 col-sm-4 col-md-6">
-                    <div class="row">
-                        <div class="col-2">
-                            <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style=width:40%>
+                            </div>
+                            <span class="progress-type">Javascrit / jQuery</span>
                         </div>
-                        <div class="col-10">
-                            <h4 class="three-reasons-heading uppercase">Why hire me??</h4>
-                            <p>some text to fill this out so check if it works :3</p>
+                        <div class="progress">
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style=width:50%>
+                            </div>
+                            <span class="progress-type">Phyton / Django</span>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style=width:15%>
+                            </div>
+                            <span class="progress-type">SQL / noSQL</span>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
     </section>
 
     <footer class="container-fluid">
