added resmue.hmtl content

--- a/Resume.html
+++ b/Resume.html
@@ -46,27 +46,32 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">
+                        <h3 class="history-heading uppercase">
                             Work History
                         </h3>
                     </div>
                 </div>
-                <div class="personal-info-item">
-                    <div class="key">
-                        <p class="uppercase">
-                            Name:
-                        </p>
-                    </div>
-                    <div class="value">
-                        <p class="uppercase">
-                            Felipe dos Santos Ferreira
-                        </p>
-                    </div>
+                <div class="history - items">
+                <div class="timeline-item" data-dates="02/1998 - 04/2004">
+                    <h4>Yet again testing if it works :D</h4>
+                    <p>yeahh</p>
                 </div>
-
+                <div class="timeline-item" data-dates="02/1994 - 04/2008">
+                    <h4>Yet again testing if it works :D</h4>
+                    <p>yeahh</p>
+                </div>
+                <div class="timeline-item" data-dates="02/2008 - 04/2010">
+                    <h4>Yet again testing if it works :D</h4>
+                    <p>yeahh</p>
+                </div>
+                <div class="timeline-item" data-dates="02/2015 - 04/2019">
+                    <h4>Yet again testing if it works :D</h4>
+                    <p>yeahh</p>
+                </div>
+                </div>
             </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
